--- a/src/PopEngine.xcconfig
+++ b/src/PopEngine.xcconfig
@@ -5,6 +5,7 @@ GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) ENABLE_OPENGL
 
 OTHER_CFLAGS = -Wno-ambiguous-macro
 
+//	including PopH264 framework is including SoyLib/src/xyz.h
 SOYLIB_PATH = $(SRCROOT)/src/
 
 //	todo: remove dlib! make it an external dll we can just call
