--- a/PopTrack.xcodeproj/xcshareddata/xcschemes/PopEngine_JavascriptCore.xcscheme
+++ b/PopTrack.xcodeproj/xcshareddata/xcschemes/PopEngine_JavascriptCore.xcscheme
@@ -66,7 +66,11 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "/Volumes/Code/Tarquini_AcidSea"
+            argument = "/Volumes/Code/PopCave"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "/Volumes/Code/Tarquini_AcidSea Debug"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
