--- a/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_V8.xcscheme
+++ b/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_V8.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "FBF67B0C1A974A0900F74C38"
-               BuildableName = "PopTrackMac.app"
-               BlueprintName = "PopTrackMac"
-               ReferencedContainer = "container:PopTrack.xcodeproj">
+               BuildableName = "PopEngineMac.app"
+               BlueprintName = "PopEngineMac"
+               ReferencedContainer = "container:PopEngine.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "FBF67B0C1A974A0900F74C38"
-            BuildableName = "PopTrackMac.app"
-            BlueprintName = "PopTrackMac"
-            ReferencedContainer = "container:PopTrack.xcodeproj">
+            BuildableName = "PopEngineMac.app"
+            BlueprintName = "PopEngineMac"
+            ReferencedContainer = "container:PopEngine.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -59,9 +59,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "FBF67B0C1A974A0900F74C38"
-            BuildableName = "PopTrackMac.app"
-            BlueprintName = "PopTrackMac"
-            ReferencedContainer = "container:PopTrack.xcodeproj">
+            BuildableName = "PopEngineMac.app"
+            BlueprintName = "PopEngineMac"
+            ReferencedContainer = "container:PopEngine.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <CommandLineArguments>
@@ -115,9 +115,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "FBF67B0C1A974A0900F74C38"
-            BuildableName = "PopTrackMac.app"
-            BlueprintName = "PopTrackMac"
-            ReferencedContainer = "container:PopTrack.xcodeproj">
+            BuildableName = "PopEngineMac.app"
+            BlueprintName = "PopEngineMac"
+            ReferencedContainer = "container:PopEngine.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
