--- a/PopEngineUnitTestApp/Info.plist
+++ b/PopEngineUnitTestApp/Info.plist
@@ -25,7 +25,7 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2019 NewChromantics. All rights reserved.</string>
 	<key>NSMainNibFile</key>
-	<string>MainMenu</string>
+	<string>PopEngine</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
