Added unit test app which loads the framework as a framework and runs
Former-commit-id: ab1519eccab794368fedda7db87df73b469fca23

--- a/Info.plist
+++ b/Info.plist
@@ -27,7 +27,7 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2015 NewChromantics. All rights reserved.</string>
 	<key>NSMainNibFile</key>
-	<string>PopTrack</string>
+	<string>PopEngine</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
