--- a/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngineUnitTestApp.xcscheme
+++ b/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngineUnitTestApp.xcscheme
@@ -14,6 +14,34 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BF151F7523845F2E00A70EBF"
+               BuildableName = "PopEngine_Ios.framework"
+               BlueprintName = "PopEngine_Ios"
+               ReferencedContainer = "container:PopEngine.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BF5EAFB4237F0C100077BCF5"
+               BuildableName = "PopEngine.framework"
+               BlueprintName = "PopEngine"
+               ReferencedContainer = "container:PopEngine.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "BF5EB0532380335D0077BCF5"
                BuildableName = "PopEngineUnitTestApp.app"
                BlueprintName = "PopEngineUnitTestApp"
