--- a/src/PopEngine.xcconfig
+++ b/src/PopEngine.xcconfig
@@ -1,3 +1,5 @@
+#include "SoyLib/SoyLib_Osx.xcconfig"
+
 INFOPLIST_FILE = $(SRCROOT)/Info.plist
 
 GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) TARGET_OSX_BUNDLE
