--- a/src/PopEngine_Ios.xcconfig
+++ b/src/PopEngine_Ios.xcconfig
@@ -16,5 +16,5 @@ HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(SOYLIB_PATH) $(DLIB_
 //VERSIONING_SYSTEM = apple-generic
 
 
-GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) JSAPI_V8
+GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) JSAPI_JSCORE
 
