OSX compile fixes
Former-commit-id: 444f1195f5e45534e366a8b76c4eb45fe2b60699

--- a/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_JavascriptCore.xcscheme
+++ b/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_JavascriptCore.xcscheme
@@ -68,6 +68,10 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
+            argument = "/Volumes/Code/PopExposeXr"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "/Volumes/Code/PopObserverMonitor/"
             isEnabled = "YES">
          </CommandLineArgument>
